# lhava_challenge

./: .flake8  .gitignore  README.md  pyproject.toml
part_1/: compute.py  main.py  result_example_output.md  strategy.py
part_2/: main.py  optimised.py  original.py
