[tool.poetry]
name = "lhava-challenge"
version = "0.1.0"
description = ""
authors = ["Lukas Bures <burylukas@seznam.cz>"]
readme = "README.md"
packages = [{include = "lhava_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
openpyxl = "^3.1.2"
memory-profiler = "^0.61.0"
tqdm = "^4.65.0"

[build-system]
requires = ["poetry-core>=1.1.7"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
